--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(HelperCode)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(HelperCode main.cpp helper.h)
+add_executable(main main.cpp helper.h)
